Fix alignment in vars tables

--- a/src/sentry/static/sentry/less/sentry.less
+++ b/src/sentry/static/sentry/less/sentry.less
@@ -2324,8 +2324,7 @@ table.table, table.vars {
 
     > pre {
       background-color: inherit;
-      color: rgba(0,0,0,.75);
-      padding: 1px 3px;
+      padding: 0;
       border: 0;
       margin-bottom: 0;
     }
